# Memchip-AI

./: .gitignore  CHANGELOG_V2.md  CLOUD_PLAN.md  HANDOFF.md  IMPROVEMENT_PLAN.md  OPENCLAW_REPLACEMENT_PLAN.md  README.md  TRANSFER_LOG.md  memory_research_notes.md  pyproject.toml  transfer.sh  transfer2.py  upload_local.py
benchmarks/: run_locomo.py  run_locomo_fullcontext.py  run_locomo_v10.py  run_locomo_v10_5.py  run_locomo_v10_6.py  run_locomo_v11.py  run_locomo_v12.py  run_locomo_v13.py  run_locomo_v14.py  run_locomo_v15.py  run_locomo_v16.py  run_locomo_v17.py  run_locomo_v18.py  run_locomo_v19.py  run_locomo_v2.py  run_locomo_v20.py  run_locomo_v21.py  run_locomo_v21_4.py  run_locomo_v23.py  run_locomo_v24.py  run_locomo_v25.py  run_locomo_v3.py  test_mh_only.py
cloud/: Dockerfile  deploy.sh  docker-compose.yml  requirements.txt
cloud/app/: auth.py  config.py  database.py  engine.py  main.py  models.py  schemas.py
cloud/nginx/: nginx.conf
dashboard/: .dockerignore  BUILD_LOG.md  Dockerfile  REDESIGN.md  package-lock.json  package.json
iterations/: BEST_SCORE.md  README.md
memchip/: core.py  llm.py
memchip/extraction/: pipeline.py  prompts.py
memchip/retrieval/: engine.py  prompts.py
memchip/storage/: sqlite_store.py
memchip/v10/: answerer.py  core.py  core_run49.py  storage.py
memchip/v10_5/: core.py  storage.py
memchip/v10_6/: core.py  storage.py
memchip/v10_backup/: core.py
memchip/v10_backup_v105/: answerer.py  consolidation.py  core.py
memchip/v11/: answerer.py  consolidation.py  core.py
memchip/v12/: consolidation.py  core.py  (+2 more)
(+154 files in other folders)
