[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memchip"
version = "0.1.0"
description = "Memory chip for AI agents. #1 on LoCoMo. Local-first, framework-agnostic."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "MemChip Labs"}]
keywords = ["ai", "memory", "agents", "llm", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.0",
    "numpy>=1.24",
    "sentence-transformers>=2.2",
    "rank-bm25>=0.2",
    "nltk>=3.8",
    "pydantic>=2.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]
mcp = ["mcp>=1.0"]

[project.scripts]
memchip = "memchip.cli:main"

[tool.setuptools.packages.find]
include = ["memchip*"]
